--- a/pages/home.html
+++ b/pages/home.html
@@ -13,15 +13,17 @@
 <div id='input'>
 
     <span id='txt'>
-        <input id='myInput' placeholder="Get Ready!">
+        <input id='myInput' placeholder="Type to start!!">
     </span>
 
 </div>
 
 <div id='btn-hold'>
     <button id='btn' onclick='show()'>New Paragraph</button>
+    <button id='btn2' onclick='reset()'>Reset</button>
     <div id='stat'>
         <div id='time'>0:0:0:00</div>
         <div id='wpm'></div>
     </div>
+
 </div>
